src/emit/snapshots/hebi__emit__tests__while_nested_while.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
while true:
  while true:
    continue
  continue


# Func:
function `main` (registers: 0, upvalues: 0, length: 15, constants: 2)
  0  | load_true
  1  | jump_if_false 13
  3  | load_true
  4  | jump_if_false 6
  6  | jump_loop 3
  8  | jump_loop 5
  10 | jump_loop 10
  12 | jump_loop 12
  14 | ret




